show branchname in code editor
closes https://jira.sc-corp.net/browse/PAC-2976

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -393,6 +393,21 @@ strong {
             float: right;
             padding-right: 5px;
         }
+
+        &.branch-name {
+          max-width: 150px;
+          padding-right: 10px;
+          border-right: 1px solid $border-primary;
+          margin-right: 5px;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          &::before {
+            @extend .font-icon;
+            content: '\E399';
+            margin-right: 5px;
+          }
+        }
     }
 
 }
