--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -9,3 +9,6 @@
 @import "editor-assets-panel";
 @import "editor-attributes-panel";
 @import "editor-usage-alert";
+@import "editor-template-overrides-view";
+@import "editor-template-entity-inspector";
+@import "editor-template-override-sidebar";
