--- a/editor/sass/editor/_editor-hierarchy-panel.scss
+++ b/editor/sass/editor/_editor-hierarchy-panel.scss
@@ -174,6 +174,10 @@
                 &.c-sprite:before {
                     content: '\E395';
                 }
+
+                &.template-instance:before {
+                    content: '\E411';
+                }
             }
         }
     }
