--- a/editor/sass/editor/_editor-layout.scss
+++ b/editor/sass/editor/_editor-layout.scss
@@ -2,12 +2,12 @@
 #layout-root {
     width: 100%;
     height: 100%;
-    grid-template-columns: 45px auto minmax(0, 1fr) auto;
+    grid-template-columns: 45px auto minmax(0, 1fr) auto auto;
     grid-template-rows: minmax(0, 1fr) auto 24px;
     grid-template-areas:
-        "toolbar hierarchy viewport attributes"
-        "toolbar hierarchy assets attributes"
-        "statusbar statusbar statusbar statusbar";
+        "toolbar hierarchy viewport attributes overrides-sidebar"
+        "toolbar hierarchy assets attributes overrides-sidebar"
+        "statusbar statusbar statusbar statusbar statusbar";
 }
 
 // left toolbar
@@ -38,4 +38,9 @@
 // status bar
 #layout-statusbar {
     grid-area: statusbar;
+}
+
+// overrides sidebar
+#layout-overrides-sidebar {
+    grid-area: overrides-sidebar;
 }
