--- a/editor/sass/pcui/_pcui-entity-input.scss
+++ b/editor/sass/pcui/_pcui-entity-input.scss
@@ -14,6 +14,8 @@
 
     color: $text-secondary;
 
+    overflow: hidden;
+
     > .pcui-label {
         margin: 0;
         flex: 1;
@@ -79,6 +81,8 @@
 // readonly state
 .pcui-entity-input.pcui-readonly {
     color: $text-secondary;
+    background-color: transparentize($color: $bcg-dark, $amount: 1 - $element-opacity-readonly);
+    border-color: transparent;
 
     > .pcui-button {
         display: none;
