Do not overflow pcui buttons (#265)

--- a/editor/sass/editor/_editor-template-entity-inspector.scss
+++ b/editor/sass/editor/_editor-template-entity-inspector.scss
@@ -36,6 +36,10 @@
 
 .template-entity-inspector-container-middle {
     padding-bottom: 5px;
+
+    > .pcui-button {
+        flex-grow: 1;
+    }
 }
 
 .template-entity-inspector-root {
