--- a/editor/sass/editor/_editor-template-overrides-view.scss
+++ b/editor/sass/editor/_editor-template-overrides-view.scss
@@ -3,6 +3,7 @@
     position: absolute;
     right: 0;
     width: 690px;
+    z-index: 1;
     max-height: 90%;
     border: 1px solid $bcg-darkest;
 }
