--- a/editor/sass/pcui/_pcui-button.scss
+++ b/editor/sass/pcui/_pcui-button.scss
@@ -18,6 +18,9 @@
     white-space: nowrap;
     cursor: pointer;
     transition: color 100ms, opacity 100ms, box-shadow 100ms;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 
