updated the hover state for source attributes in the asset inspector

--- a/editor/sass/pcui/_pcui-label.scss
+++ b/editor/sass/pcui/_pcui-label.scss
@@ -26,3 +26,11 @@
 .pcui-label.pcui-error {
     color: $error-secondary;
 }
+
+.pcui-label.pcui-selectable {
+    &:hover {
+        color: $text-active;
+        text-decoration: underline;
+        @extend .noSelect;
+    }
+}
