--- a/editor/sass/editor/_editor-layout.scss
+++ b/editor/sass/editor/_editor-layout.scss
@@ -2,8 +2,8 @@
 #layout-root {
     width: 100%;
     height: 100%;
-    grid-template-columns: 45px auto minmax(0, 1fr) auto;
-    grid-template-rows: minmax(0, 1fr) auto 24px;
+    grid-template-columns: 45px auto 1fr auto;
+    grid-template-rows: 1fr auto 24px;
     grid-template-areas:
         "toolbar hierarchy viewport attributes"
         "toolbar hierarchy assets attributes"
@@ -13,30 +13,42 @@
 // left toolbar
 #layout-toolbar {
     grid-area: toolbar;
+    min-width: 0;
+    min-height: 0;
 }
 
 // hierarchy panel
 #layout-hierarchy {
     grid-area: hierarchy;
+    min-width: 0;
+    min-height: 0;
 }
 
 // 3d viewport
 #layout-viewport {
     grid-area: viewport;
+    min-width: 0;
+    min-height: 0;
 }
 
 // assets panel
 #layout-assets {
     grid-area: assets;
+    min-width: 0;
+    min-height: 0;
 }
 
 // attributes inspector
 #layout-attributes {
     grid-area: attributes;
+    min-width: 0;
+    min-height: 0;
 }
 
 // status bar
 #layout-statusbar {
     grid-area: statusbar;
     z-index: 1; // bring status bar in front of possible overlays
+    min-width: 0;
+    min-height: 0;
 }
