--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -9,6 +9,7 @@
 @import "editor-assets-panel";
 @import "editor-attributes-panel";
 @import "editor-usage-alert";
+@import "editor-entities-treeview";
 @import "editor-entity-inspector";
 @import "editor-template-overrides-view";
 @import "editor-template-entity-inspector";
