--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -28,6 +28,7 @@
 @import 'pcui-asset-thumbnail';
 @import 'pcui-array-input';
 @import 'pcui-select-input';
+@import 'pcui-tree-view';
 @import 'pcui-drop-manager';
 @import 'pcui-drop-target';
 @import 'pcui-inspector';
