--- a/editor/sass/editor/_editor-common.scss
+++ b/editor/sass/editor/_editor-common.scss
@@ -1,123 +1,77 @@
+
+$asset-icons: (
+    'animation': '\E213',
+    'audio': '\E210',
+    'cubemap': '\E220',
+    'folder': '\E139',
+    'bundle': '\E410',
+    'json': '\E207',
+    'material': '\E195',
+    'model': '\E188',
+    'scene': '\E188',
+    'script': '\E392',
+    'sprite': '\E395',
+    'template': '\E411',
+    'texture': '\E201',
+    'textureatlas': '\E201',
+    'text': '\E209',
+    'html': '\E205',
+    'css': '\E206',
+    'shader': '\E202',
+    'binary': '\E299',
+    'font': '\E299'
+);
+
 .asset-icon-prefix {
-    &.type-animation:before {
-        content: '\E213';
-    }
-    &.type-audio:before {
-        content: '\E210';
-    }
-    &.type-cubemap:before {
-        content: '\E220';
-    }
-    &.type-folder:before {
-        content: '\E139';
-    }
-    &.type-bundle:before {
-        content: '\E410';
-    }
-    &.type-json:before {
-        content: '\E207';
-    }
-    &.type-material:before {
-        content: '\E195';
-    }
-    &.type-model:before {
-        content: '\E188';
-    }
-    &.type-scene:before {
-        content: '\E188';
-    }
-    &.type-script:before {
-        content: '\E392';
-    }
-    &.type-sprite:before {
-        content: '\E395';
-    }
-    &.type-texture:before {
-        content: '\E201';
-    }
-    &.type-textureatlas:before {
-        content: '\E201';
-    }
-    &.type-text:before {
-        content: '\E209';
-    }
-    &.type-html:before {
-        content: '\E205';
-    }
-    &.type-css:before {
-        content: '\E206';
-    }
-    &.type-shader:before {
-        content: '\E353';
-    }
-    &.type-shader:before {
-        content: '\E202';
-    }
-    &.type-binary:before {
-        content: '\E299';
-    }
-    &.type-font:before {
-        content: '\E299';
+    @each $name, $glyph in $asset-icons {
+        &.type-#{$name}:before {
+            content: $glyph;
+        }
     }
 }
 
+.asset-icon-postfix {
+    @each $name, $glyph in $asset-icons {
+        &.type-#{$name}:after {
+            content: $glyph;
+        }
+    }
+}
+
+$component-icons: (
+    'animation': '\E198',
+    'audiolistener': '\E196',
+    'audiosource': '\E197',
+    'button': '\E405',
+    'camera': '\E212',
+    'collision': '\E187',
+    'element': '\E378',
+    'layoutchild': '\E143',
+    'layoutgroup': '\E143',
+    'light': '\E194',
+    'model': '\E188',
+    'particlesystem': '\E199',
+    'rigidbody': '\E189',
+    'screen': '\E403',
+    'script': '\E236',
+    'scrollbar': '\E409',
+    'scrollview': '\E408',
+    'sound': '\E197',
+    'sprite': '\E395'
+);
 
 .component-icon-prefix {
-    &.type-animation:before {
-        content: '\E198';
+    @each $name, $glyph in $component-icons {
+        &.type-#{$name}:before {
+            content: $glyph;
+        }
     }
-    &.type-audiolistener:before {
-        content: '\E196';
-    }
-    &.type-audiosource:before {
-        content: '\E197';
-    }
-    &.type-button:before {
-        content: '\E405';
-    }
-    &.type-camera:before {
-        content: '\E212';
-    }
-    &.type-collision:before {
-        content: '\E187';
-    }
-    &.type-element:before {
-        content: '\E378';
-    }
-    &.type-layoutchild:before {
-        content: '\E143';
-    }
-    &.type-layoutgroup:before {
-        content: '\E143';
-    }
-    &.type-light:before {
-        content: '\E194';
-    }
-    &.type-model:before {
-        content: '\E188';
-    }
-    &.type-particlesystem:before {
-        content: '\E199';
-    }
-    &.type-rigidbody:before {
-        content: '\E189';
-    }
-    &.type-screen:before {
-        content: '\E403';
-    }
-    &.type-script:before {
-        content: '\E236';
-    }
-    &.type-scrollbar:before {
-        content: '\E409';
-    }
-    &.type-scrollview:before {
-        content: '\E408';
-    }
-    &.type-sound:before {
-        content: '\E197';
-    }
-    &.type-sprite:before {
-        content: '\E395';
+}
+
+.component-icon-postfix {
+    @each $name, $glyph in $component-icons {
+        &.type-#{$name}:after {
+            content: $glyph;
+        }
     }
 }
