Pcui asset inspector model (#308)

--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -32,4 +32,5 @@
 @import 'pcui-drop-manager';
 @import 'pcui-drop-target';
 @import 'pcui-inspector';
+@import 'pcui-progress';
 @import 'pcui-hidden'; // this should be last
