--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -20,3 +20,5 @@
 @import "editor-component-sound-inspector";
 @import "editor-component-sprite-inspector";
 @import "editor-component-animation-inspector";
+@import "editor-asset-model-inspector";
+@import "editor-asset-model-preview";
