--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -22,3 +22,4 @@
 @import "editor-component-animation-inspector";
 @import "editor-asset-model-inspector";
 @import "editor-asset-model-preview";
+@import "editor-asset-audio-inspector";
