move the text asset inspector over to pcui

--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -33,4 +33,5 @@
 @import 'pcui-drop-target';
 @import 'pcui-inspector';
 @import 'pcui-progress';
+@import 'pcui-code';
 @import 'pcui-hidden'; // this should be last
