include the code block inspector for css, html, json and shader assets

--- a/editor/sass/pcui/_pcui-code.scss
+++ b/editor/sass/pcui/_pcui-code.scss
@@ -1,5 +1,6 @@
 .pcui-code {
     background: #20292b;
+    overflow: auto;
     .pcui-code-inner {
         color: #f60;
         font-family: inconsolatamedium, Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
