--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -22,4 +22,5 @@
 @import "editor-component-animation-inspector";
 @import "editor-asset-model-inspector";
 @import "editor-asset-model-preview";
+@import "editor-asset-font-preview";
 @import "editor-asset-audio-inspector";
