font inspector localizations

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -24,3 +24,4 @@
 @import "editor-asset-model-preview";
 @import "editor-asset-font-preview";
 @import "editor-asset-audio-inspector";
+@import "editor-asset-font-inspector";
