--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -23,3 +23,5 @@
 @import "editor-asset-model-inspector";
 @import "editor-asset-model-preview";
 @import "editor-asset-audio-inspector";
+@import "editor-asset-related-assets";
+@import "editor-asset-source-inspector";
