--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -21,5 +21,6 @@
 @import "editor-component-sprite-inspector";
 @import "editor-component-animation-inspector";
 @import "editor-asset-model-inspector";
+@import "editor-asset-cubemap-inspector";
 @import "editor-asset-model-preview";
 @import "editor-asset-audio-inspector";
