split the cubemap face out into its own file and add a cubemap preview class

--- a/editor/sass/editor/_editor-asset-cubemap-inspector.scss
+++ b/editor/sass/editor/_editor-asset-cubemap-inspector.scss
@@ -19,6 +19,10 @@
     }
 }
 
+.pcui-cubemap-asset-inspector-face.pcui-disabled {
+    opacity: 50%;
+}
+
 .pcui-cubemap-asset-inspector-face.Top {
     order: 1;
     margin-left: 25%;
