--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -24,3 +24,4 @@
 @import "editor-asset-cubemap-inspector";
 @import "editor-asset-model-preview";
 @import "editor-asset-audio-inspector";
+@import "editor-asset-cubemap-preview";
