--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -23,3 +23,4 @@
 @import "editor-asset-model-inspector";
 @import "editor-asset-model-preview";
 @import "editor-asset-audio-inspector";
+@import "editor-asset-script-inspector";
