Texture asset inspector (#321)
* first pass at new texture inspector

* remove empty strings from select

* initialize _compressionChangeTimeout to null in the constructor

* pass formatters over in MultiPathBindingElementToObservers.clone()

* safely add click handler to basis compress

* directly assign const from this instead of destructured assignment

* remove old draft hackery

* setup basis import in link() instead of constructor()

* enable basis on assets if hasBasis and imported

* basis should not care about alpha

* hide legacy signage when no basis perms

* no var

* add compression size labels

* pvr warning

* add pvrbpp

* remove orange flash

* add checkFormats()

* remove basis non-square-pot pvr autoset

* add basis checkbox and match quip designs

* add getMeta for when there is no asset meta

* fix for bug when having to click get meta

* var ---> const

* texture preview

* only call updatePreview if it exists

* add pcui.InfoBox

* show/hide basis pvr warning

* basis pvr warning message from quip

* fix how args are handled in infobox constructor

* avoid calling unlink multiple times

* remove TODO comments

* quip ui changes: enable/disabled basis controls

--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -33,5 +33,6 @@
 @import 'pcui-drop-target';
 @import 'pcui-inspector';
 @import 'pcui-progress';
+@import 'pcui-infobox';
 @import 'pcui-code';
 @import 'pcui-hidden'; // this should be last
