--- a/editor/sass/editor/_editor-asset-model-inspector.scss
+++ b/editor/sass/editor/_editor-asset-model-inspector.scss
@@ -38,3 +38,20 @@
         }
     }
 }
+
+.pcui-asset-preview-canvas {
+    transform: scale(1, -1);
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 8px solid #293538;
+    border-top: 0;
+    box-sizing: border-box;
+    margin: auto;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
