--- a/editor/sass/pcui/_pcui-inspector.scss
+++ b/editor/sass/pcui/_pcui-inspector.scss
@@ -13,3 +13,22 @@
         }
     }
 }
+
+.pcui-inspector-subhead {
+    :first-child {
+        color: $text-primary;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+}
+
+.pcui-asset-preview-container {
+    position: relative;
+    background-color: $bcg-darker;
+    height: 0;
+    padding-top: 45%;
+}
+
+.pcui-asset-preview-container-large {
+    padding-top: 100%;
+}
