--- a/editor/sass/editor/_editor-asset-texture-inspector.scss
+++ b/editor/sass/editor/_editor-asset-texture-inspector.scss
@@ -33,3 +33,12 @@
     text-align: right;
     font-size: 12px;
 }
+
+.asset-texture-inspector-compress-button {
+    color: #f60;
+
+}
+
+.asset-texture-inspector-compress-button.pcui-disabled {
+    color: inherit;
+}
