add a message to the script asset inspector when no scripts are present

--- a/editor/sass/editor/_editor-asset-script-inspector.scss
+++ b/editor/sass/editor/_editor-asset-script-inspector.scss
@@ -5,7 +5,7 @@
     margin: 6px;
 }
 
-.script-asset-inspector-error-container.pcui-hidden {
+.script-asset-inspector-container.pcui-hidden, .script-asset-inspector-error-container.pcui-hidden {
     display: none;
 }
 
