--- a/editor/sass/editor/_editor-component-script-inspector.scss
+++ b/editor/sass/editor/_editor-component-script-inspector.scss
@@ -5,7 +5,7 @@
 .script-component-inspector-script {
     margin-bottom: 2px;
 
-    .pcui-inspector > .pcui-label-group {
+    .pcui-inspector > .pcui-label-group, .pcui-inspector > .pcui-asset-input {
         margin: 3px;
     }
 
