--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -20,11 +20,11 @@
 @import "editor-component-sound-inspector";
 @import "editor-component-sprite-inspector";
 @import "editor-component-animation-inspector";
+@import "editor-asset-preview";
 @import "editor-asset-model-inspector";
+@import "editor-asset-material-inspector";
 @import "editor-asset-cubemap-inspector";
 @import "editor-asset-audio-inspector";
-@import "editor-asset-cubemap-preview";
-@import "editor-asset-font-preview";
 @import "editor-asset-texture-inspector";
 @import "editor-asset-audio-inspector";
 @import "editor-asset-script-inspector";
