--- a/editor/sass/pcui/_pcui-inspector.scss
+++ b/editor/sass/pcui/_pcui-inspector.scss
@@ -12,6 +12,10 @@
             @extend .fixedFont;
         }
     }
+
+    > .pcui-asset-input {
+        margin: 3px 10px;
+    }
 }
 
 .pcui-inspector-subhead {
@@ -20,15 +24,4 @@
         font-weight: bold;
         text-transform: uppercase;
     }
-}
-
-.pcui-asset-preview-container {
-    position: relative;
-    background-color: $bcg-darker;
-    height: 0;
-    padding-top: 45%;
-}
-
-.pcui-asset-preview-container-large {
-    padding-top: 100%;
 }
