--- a/editor/sass/editor/_editor-asset-cubemap-inspector.scss
+++ b/editor/sass/editor/_editor-asset-cubemap-inspector.scss
@@ -19,6 +19,11 @@
     }
 }
 
+.pcui-cubemap-asset-inspector-face:hover {
+    outline: #f60 2px solid;
+    z-index: 2;
+}
+
 .pcui-cubemap-asset-inspector-face.pcui-disabled {
     opacity: 50%;
 }
