--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -32,3 +32,4 @@
 @import "editor-asset-source-inspector";
 @import "editor-asset-font-inspector";
 @import "editor-asset-sprite-preview";
+@import "editor-settings-rendering-panel";
