--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -33,3 +33,4 @@
 @import "editor-asset-font-inspector";
 @import "editor-asset-sprite-preview";
 @import "editor-settings-rendering-panel";
+@import "editor-settings-layers-panel";
