Updated the base groups settings panel to use pcui

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -34,3 +34,4 @@
 @import "editor-asset-sprite-preview";
 @import "editor-settings-rendering-panel";
 @import "editor-settings-layers-panel";
+@import "editor-settings-batchgroups-panel";
