update the external scripts settings panel to pcui and add org requirements for loading screen panel

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -35,3 +35,4 @@
 @import "editor-settings-rendering-panel";
 @import "editor-settings-layers-panel";
 @import "editor-settings-batchgroups-panel";
+@import "editor-settings-loading-screen";
