update asset tasks and scripts order settings with pcui

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -36,3 +36,5 @@
 @import "editor-settings-layers-panel";
 @import "editor-settings-batchgroups-panel";
 @import "editor-settings-loading-screen";
+@import "editor-settings-asset-tasks";
+@import "editor-settings-scripts-panel";
