--- a/editor/sass/pcui/_pcui-container.scss
+++ b/editor/sass/pcui/_pcui-container.scss
@@ -74,6 +74,7 @@
     outline: 2px solid $text-primary;
     box-sizing: border-box;
     opacity: 0.7;
+    z-index: 1;
     // background: $bcg-darkest !important;
     // > * {
     //     transition: none !important;
