--- a/editor/sass/editor/_editor-settings-asset-tasks.scss
+++ b/editor/sass/editor/_editor-settings-asset-tasks.scss
@@ -1,5 +1,5 @@
 .asset-tasks-settings-panel-section {
-    margin: 0 6px;
+    margin: 0 $element-margin;
 }
 
 .asset-tasks-settings-panel-attributes {
