--- a/editor/sass/editor/_editor-settings-rendering-panel.scss
+++ b/editor/sass/editor/_editor-settings-rendering-panel.scss
@@ -1,5 +1,5 @@
 .rendering-settings-panel-divider {
     height: 1px;
-    background-color: #2c393c;
+    background-color: $bcg-dark;
     margin: 4px 10px;
 }
