--- a/editor/sass/editor/_editor-settings-layers-panel.scss
+++ b/editor/sass/editor/_editor-settings-layers-panel.scss
@@ -1,5 +1,5 @@
 .layers-settings-panel-render-order-panel, .layers-settings-panel-render-order-list-container {
-    margin: 6px;
+    margin: $element-margin;
 }
 
 .layers-settings-panel-layers-container {
@@ -7,21 +7,21 @@
 }
 
 .layers-settings-panel-render-order-panel {
-    border: 1px solid #20292b;
+    border: 1px solid $bcg-darkest;
 }
 
 .layers-settings-panel-render-order-list-item, .layers-settings-panel-layer-panel {
-    border-top: 1px solid #20292b;
-    border-left: 1px solid #20292b;
-    border-right: 1px solid #20292b;
+    border-top: 1px solid $bcg-darkest;
+    border-left: 1px solid $bcg-darkest;
+    border-right: 1px solid $bcg-darkest;
 }
 
 .layers-settings-panel-render-order-list-item:last-child, .layers-settings-panel-layer-panel:last-child {
-    border-bottom: 1px solid #20292b;
+    border-bottom: 1px solid $bcg-darkest;
 }
 
 .layers-settings-panel-render-order-list-item {
-    background: #2c393c;
+    background: $bcg-dark;
 
     .pcui-panel-header {
         background: transparent;
@@ -31,5 +31,5 @@
 .layers-settings-panel-render-order-list-item-transparent {
     background-size: 20px 20px;
     background-position: 0 -13px, 10px -3px;
-    background-image: linear-gradient(45deg, #293538 25%, transparent 25%, transparent 75%, #293538 75%, #293538 100%),linear-gradient(45deg, #293538 25%, transparent 25%, transparent 75%, #293538 75%, #293538 100%);
+    background-image: linear-gradient(45deg, $bcg-darker 25%, transparent 25%, transparent 75%, $bcg-darker 75%, $bcg-darker 100%),linear-gradient(45deg, $bcg-darker 25%, transparent 25%, transparent 75%, $bcg-darker 75%, $bcg-darker 100%);
 }
