Replace color with variable

--- a/editor/sass/editor/_editor-settings-scripts-panel.scss
+++ b/editor/sass/editor/_editor-settings-scripts-panel.scss
@@ -4,7 +4,7 @@
     border-top: 1px solid $bcg-darker;
     border-right: 1px solid $bcg-darker;
     .pcui-panel-header {
-        color: #f60;
+        color: $text-active;
         background-color: transparent;
     }
 }
