mesh instance description css fix

--- a/editor/sass/editor/_editor-asset-model-inspector.scss
+++ b/editor/sass/editor/_editor-asset-model-inspector.scss
@@ -59,6 +59,7 @@
     font-size: 12px;
     padding: 8px 20px;
     margin: 0;
+    white-space: inherit;
     h5 {
         color: $text-active;
         font-family: 'Proxima Nova Bold', 'Helvetica Neue', Arial, Helvetica, sans-serif;
