Template overrides inspector (#355)

--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -35,4 +35,5 @@
 @import 'pcui-progress';
 @import 'pcui-infobox';
 @import 'pcui-code';
+@import 'pcui-tooltip';
 @import 'pcui-hidden'; // this should be last
