--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -36,4 +36,5 @@
 @import 'pcui-infobox';
 @import 'pcui-code';
 @import 'pcui-tooltip';
+@import 'pcui-table';
 @import 'pcui-hidden'; // this should be last
