--- a/editor/sass/pcui/_pcui-table.scss
+++ b/editor/sass/pcui/_pcui-table.scss
@@ -32,13 +32,6 @@
             }
         }
     }
-
-    > tbody {
-        > tr:hover {
-            background-color: $bcg-dark;
-            color: $text-primary;
-        }
-    }
 }
 
 .pcui-table:not(.pcui-table-resizing) {
@@ -49,6 +42,18 @@
     > table > tbody > tr {
         cursor: pointer;
     }
+}
+
+.pcui-table-row:not(.pcui-table-row-selected) {
+    &:hover, &:focus {
+        background-color: $bcg-dark;
+        color: $text-primary;
+    }
+}
+
+.pcui-table-row-selected {
+    background-color: $bcg-darkest;
+    color: $text-primary;
 }
 
 .pcui-table-cell {
@@ -71,11 +76,11 @@
     &:after {
         @extend .font-icon;
         vertical-align: middle;
-        content: '\E168';
+        content: '\E167';
     }
 
     &.pcui-table-cell-sort-descending:after {
-        content: '\E167';
+        content: '\E168';
     }
 }
 
