wip drag and drop in asset panel / folder view

--- a/editor/sass/pcui/_pcui-tree-view.scss
+++ b/editor/sass/pcui/_pcui-tree-view.scss
@@ -190,6 +190,8 @@
     margin-top: -1px;
     margin-left: -1px;
 
+    pointer-events: none;
+
     &.before {
         border-top: 4px solid $text-active;
         padding-right: 8px;
