--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -347,6 +347,28 @@
     }
 }
 
+.pcui-asset-panel-details-name {
+    border: 4px solid transparent;
+
+    > .pcui-label {
+        margin: 0px;
+        margin-left: $element-margin;
+    }
+}
+
+.pcui-asset-panel-highlighted-asset {
+    &.pcui-treeview-item > .pcui-treeview-item-contents {
+        .pcui-treeview-item-icon, .pcui-treeview-item-text {
+            color: $text-primary;
+        }
+    }
+
+    .pcui-asset-panel-details-name {
+        color: $text-primary;
+        border-color: $text-active;
+    }
+}
+
 .pcui-asset-panel-current-folder {
     > .pcui-treeview-item-contents {
         color: $text-active;
