Make pcui.AssetThumbnail use font icons when possible

--- a/editor/sass/editor/_editor-asset-cubemap-inspector.scss
+++ b/editor/sass/editor/_editor-asset-cubemap-inspector.scss
@@ -16,6 +16,12 @@
     background-color: #07f;
     .pcui-asset-thumb {
         padding-top: 100%;
+        display: block;
+        > img {
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
     }
 }
 
