--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -29,6 +29,7 @@
 @import 'pcui-array-input';
 @import 'pcui-select-input';
 @import 'pcui-tree-view';
+@import 'pcui-grid-view';
 @import 'pcui-drop-manager';
 @import 'pcui-drop-target';
 @import 'pcui-inspector';
