--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -407,6 +407,11 @@
         &:before {
             font-size: 48px;
             font-weight: 100;
+            color: $text-darkest;
         }
+    }
+
+    .pcui-gridview-item-text {
+        color: $text-primary;
     }
 }
