--- a/editor/sass/pcui/_pcui-grid-view.scss
+++ b/editor/sass/pcui/_pcui-grid-view.scss
@@ -12,10 +12,15 @@
     flex-shrink: 0;
     width: 104px;
     height: 104px;
+
+    &:not(.pcui-disabled):hover {
+        background-color: $bcg-darker;
+    }
 }
 
 .pcui-gridview-item-text {
     max-width: 100px;
+    font-size: 12px;
     overflow: hidden;
     text-overflow: ellipsis;
 }
